--- a/index.html
+++ b/index.html
@@ -35,9 +35,56 @@
 			<div class="content">
 				<h1>Learn something new everyday</h2>
 				<p>
-					be a producer, learn for yourself, learn for our species. Make something great.
+					Be a producer, learn for yourself, learn for our species. Make something great.
 				</p>
 				<div class="button">Start here</div>
+			</div>
+		</div>
+
+		<!-- information section -->
+
+		<div id="information-main">
+			<div id="information-left">
+				<img src="./resources/images/information-main.jpg" alt="student-reading">
+				<div class="text">
+					<h1>It doesn't hurt to keep practicing</h1>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc semper urna sem, non ultricies neque laoreet vel. Proin lobortis magna eget nulla vestibulum convallis. Etiam ullamcorper ut libero vitae ultricies.
+					</p>
+					<p>
+						Emanuel, Sr. Strategist at Hiring.com
+					</p>
+				</div>
+			</div>
+			<div id="information-right">
+				<div class="more-info">
+					<img src="./resources/images/information-orientation.jpg" alt="students-walking">
+					<div class="text">
+						<h2>Orientation date</h2>
+						<p>Tue 10/11 & Wed 10/12 8am-3pm</p>
+						<p>Read more</p>
+					</div>
+				</div>
+				<div class="more-info">
+					<img src="./resources/images/information-campus.jpg" alt="our-campus">
+					<div class="text">
+						<h2>Our campus</h2>
+						<p>
+							Find which campus is close by you
+						</p>
+						<p>read more</p>
+					</div>
+				</div>
+				<div class="more-info">
+					<img src="./resources/images/information-guest-lecture.jpg" alt="">
+					<div class="text">
+						<h2>Our guest lecture</h2>
+						<p>
+							Loin a keynote with oliver sacks about msic in medical treatment
+						</p>
+						<p>Read more</p>
+					</div>
+				</div>
 			</div>
 		</div>
 
