--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div id="banner">
 			<img src="./resources/images/banner.jpg" alt="kids-learning-at-a-park-bench">
 			<div class="content">
-				<h1>Learn something new everyday</h2>
+				<h1>Learn something new everyday</h1>
 				<p>
 					Be a producer, learn for yourself, learn for our species. Make something great.
 				</p>
@@ -62,7 +62,7 @@
 					<div class="text">
 						<h2>Orientation date</h2>
 						<p>Tue 10/11 & Wed 10/12 8am-3pm</p>
-						<p>Read more</p>
+						<a href=""><p>Read more</p></a>
 					</div>
 				</div>
 				<div class="more-info">
@@ -72,7 +72,7 @@
 						<p>
 							Find which campus is close by you
 						</p>
-						<p>read more</p>
+						<a href=""><p>Read more</p></a>
 					</div>
 				</div>
 				<div class="more-info">
@@ -82,8 +82,54 @@
 						<p>
 							Loin a keynote with oliver sacks about msic in medical treatment
 						</p>
-						<p>Read more</p>
+						<a href=""><p>Read more</p></a>
 					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- course section -->
+
+		<div id="course section">
+			<div id="title">
+				<h1>Start learning</h1>
+			</div>
+			<div id="courses">
+				<div class="course">
+					<img src="./resources/images/course-software.jpg" alt="">
+					<h2>Software engineering</h2>
+					<p></p>
+					<p></p>
+				</div>
+				<div class="course">
+					<img src="./resources/images/course-computer-art.jpg" alt="student-designing-art">
+					<h2>Computer art</h2>
+					<p></p>
+					<p></p>
+				</div>
+				<div class="course">
+					<img src="./resources/images/course-design.jpg" alt="Student-with-a-camera">
+					<h2>Design</h2>
+					<p></p>
+					<p></p>
+				</div>
+				<div class="course">
+					<img src="./resources/images/course-data.jpg" alt="screen-with-data-graphs">
+					<h2>Data</h2>
+					<p></p>
+					<p></p>
+				</div>
+				<div class="course">
+					<img src="./resources/images/course-business.jpg" alt="chess-set">
+					<h2>Business</h2>
+					<p></p>
+					<p></p>
+				</div>
+				<div class="course">
+					<img src="./resources/images/course-marketing.jpg" alt="touching-an-i-watch">
+					<h2>Marketing</h2>
+					<p></p>
+					<p></p>
 				</div>
 			</div>
 		</div>
