--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<img src="./resources/images/information-orientation.jpg" alt="students-walking">
 					<div class="text">
 						<h2>Orientation date</h2>
-						<p>Tue 10/11 & Wed 10/12 8am-3pm</p>
+						<p>Tue 10/11 &amp Wed 10/12 8am-3pm</p>
 						<a href=""><p>Read more</p></a>
 					</div>
 				</div>
@@ -90,46 +90,98 @@
 
 		<!-- course section -->
 
-		<div id="course section">
-			<div id="title">
+		<div id="course-section">
+			<div class="title">
 				<h1>Start learning</h1>
 			</div>
 			<div id="courses">
 				<div class="course">
 					<img src="./resources/images/course-software.jpg" alt="">
 					<h2>Software engineering</h2>
-					<p></p>
-					<p></p>
+					<p>COURSES</p>
+					<p>
+						Web Development, Mobile Development, iOT, APIs
+					</p>
 				</div>
 				<div class="course">
 					<img src="./resources/images/course-computer-art.jpg" alt="student-designing-art">
 					<h2>Computer art</h2>
-					<p></p>
-					<p></p>
+					<p>COURSES</p>
+					<p>
+						Imaging &amp Design, Web Design, Motion Graphics &amp Visual Effects, Computer Animation
+					</p>
 				</div>
 				<div class="course">
 					<img src="./resources/images/course-design.jpg" alt="Student-with-a-camera">
 					<h2>Design</h2>
-					<p></p>
-					<p></p>
+					<p>COURSES</p>
+					<p>User Experience Design, User Research, Visual Design</p>
 				</div>
 				<div class="course">
 					<img src="./resources/images/course-data.jpg" alt="screen-with-data-graphs">
 					<h2>Data</h2>
-					<p></p>
-					<p></p>
+					<p>COURSES</p>
+					<p>
+						Data Science, Big Data, SQL, Data Visualization
+					</p>
 				</div>
 				<div class="course">
 					<img src="./resources/images/course-business.jpg" alt="chess-set">
 					<h2>Business</h2>
-					<p></p>
-					<p></p>
+					<p>COURSES</p>
+					<p>
+						Product Development, Business Development, Startup
+					</p>
 				</div>
 				<div class="course">
 					<img src="./resources/images/course-marketing.jpg" alt="touching-an-i-watch">
 					<h2>Marketing</h2>
-					<p></p>
-					<p></p>
+					<p>COURSES</p>
+					<p>
+						Analytics, Content Marketing, Mobile Marketing
+					</p>
+				</div>
+			</div>
+		</div>
+
+		<!-- thesis section -->
+
+		<div id="thesis">
+			<div class="title">
+				<h1>Thesis exhibit</h1>
+			</div>
+			<div id="thesis-info">
+				<div id="thesis-left">
+					<video width="" height="" controls>
+					 <source src="./resources/videos/thesis.mp4" type="video/mp4">
+					 Your browser does not support this video, you should update your browser or contact your system administrator
+					</video>
+					<div id="thesis-text">
+						<h2>Reimagine urban</h2>
+						<p>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc semper urna sem, non ultricies neque laoreet vel. Proin lobortis magna eget nulla vestibulum convallis. Etiam ullamcorper ut libero vitae ultricies.
+						</p>
+					</div>
+				</div>
+				<div id="thesis-right">
+					<div class="thesis-right">
+						<img src="./resources/images/thesis-fisma.jpg" alt="student-holding-art-work-and-smart-phone" />
+						<div class="more-info">
+							<h2>Fisma: Design and Prototype</h2>
+							<p>
+								Designer showcase of new prototype Product
+							</p>
+						</div>
+					</div>
+					<div class="thesis-right">
+						<img src="./resources/images/thesis-now-and-then.jpg" alt="new-york-sky-line" />
+						<div class="more-info">
+							<h2>Now and then</h2>
+							<p>
+								Research study about New York
+							</p>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -139,7 +191,13 @@
 	<!-- footer -->
 
 	<footer>
-
+		<p>
+			&copy 2016 Colmar Academy. All rights reserved
+		</p>
+		<ul>
+			<a href="#terms"><li>Terms</li></a>
+			<a href="#terms"><li>Privacy</li></a>
+		</ul>
 	</footer>
 
 </body>
