start mobile view for header

--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
 				<a src="#signin"><li>Sign in</li></a>
 			</ul>
 		</nav>
+
+		<div id="header-mobile">
+			<a href="#logo"><img src="./resources/images/ic-logo.svg" alt="logo-icon"></a>
+			<a href="#campus"><img src="./resources/images/ic-on-campus.svg" alt="desk-icon"></a>
+			<a href="#online"><img src="./resources/images/ic-online.svg" alt="computer-screen-icon"></a>
+			<a href="#login"><img src="./resources/images/ic-login.svg" alt="login-icon"></a>
+		</div>
 	</header>
 
 	<!-- Main Section -->
@@ -80,7 +87,7 @@
 					<div class="text">
 						<h2>Our guest lecture</h2>
 						<p>
-							Loin a keynote with oliver sacks about msic in medical treatment
+							Loin a keynote with oliver sacks about music in medical treatment
 						</p>
 						<a href=""><p>Read more</p></a>
 					</div>
