finish mobile header

--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
 	<!-- Header -->
 
 	<header>
-		<div class="logo">
-			<img src="./resources/images/ic-logo.svg" alt="Colmar-Academy logo">
-			<p>COLMAR<span>ACADEMY</span></p>
+		<div id="header-desktop">
+			<div class="logo">
+				<img src="./resources/images/ic-logo.svg" alt="Colmar-Academy logo">
+				<p>COLMAR<span>ACADEMY</span></p>
+			</div>
+			<nav>
+				<ul>
+					<a src="#campus"><li>On campus</li></a>
+					<a src="#companies"><li>For companies</li></a>
+					<a src="#signin"><li>Sign in</li></a>
+				</ul>
+			</nav>
 		</div>
-		<nav>
-			<ul>
-				<a src="#campus"><li>On campus</li></a>
-				<a src="#companies"><li>For companies</li></a>
-				<a src="#signin"><li>Sign in</li></a>
-			</ul>
-		</nav>
 
 		<div id="header-mobile">
 			<a href="#logo"><img src="./resources/images/ic-logo.svg" alt="logo-icon"></a>
