--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="resources/css/reset.css" rel="stylesheet" type="text/css">
 	<link href="resources/css/index.css" rel="stylesheet" type="text/css">
 </head>
