--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
 			</div>
 			<div id="information-right">
 				<div class="more-info">
-					<img src="./resources/images/information-orientation.jpg" alt="students-walking">
+					<img class="pc" src="./resources/images/information-orientation.jpg" alt="students-walking">
+					<!-- mobile image -->
+					<img class="mobile" src="./resources/images/information-orientation-mobile.jpg" alt="students-walking">
 					<div class="text">
 						<h2>Orientation date</h2>
 						<p>Tue 10/11 &amp Wed 10/12 8am-3pm</p>
@@ -76,7 +78,9 @@
 					</div>
 				</div>
 				<div class="more-info">
-					<img src="./resources/images/information-campus.jpg" alt="our-campus">
+					<img class="pc" src="./resources/images/information-campus.jpg" alt="our-campus">
+					<!-- mobile image -->
+					<img class="mobile" src="./resources/images/information-campus-mobile.jpg" alt="our-campus">
 					<div class="text">
 						<h2>Our campus</h2>
 						<p>
@@ -86,7 +90,9 @@
 					</div>
 				</div>
 				<div class="more-info">
-					<img src="./resources/images/information-guest-lecture.jpg" alt="">
+					<img class="pc" src="./resources/images/information-guest-lecture.jpg" alt="oliver-sacks-photo">
+					<!-- mobile image -->
+					<img class="mobile" src="./resources/images/information-guest-lecture-mobile.jpg" alt="oliver-sacks-photo">
 					<div class="text">
 						<h2>Our guest lecture</h2>
 						<p>
