add responsive design to courses, thesis, and footer

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="resources/css/reset.css" rel="stylesheet" type="text/css">
 	<link href="resources/css/index.css" rel="stylesheet" type="text/css">
+	<title>Colmar Academy</title>
 </head>
 
 <body>
@@ -18,7 +19,7 @@
 				<p>COLMAR<span>ACADEMY</span></p>
 			</div>
 			<nav>
-				<ul>
+				<ul role="presentation">
 					<a src="#campus"><li>On campus</li></a>
 					<a src="#companies"><li>For companies</li></a>
 					<a src="#signin"><li>Sign in</li></a>
@@ -27,10 +28,10 @@
 		</div>
 
 		<div id="header-mobile">
-			<a href="#logo"><img src="./resources/images/ic-logo.svg" alt="logo-icon"></a>
-			<a href="#campus"><img src="./resources/images/ic-on-campus.svg" alt="desk-icon"></a>
-			<a href="#online"><img src="./resources/images/ic-online.svg" alt="computer-screen-icon"></a>
-			<a href="#login"><img src="./resources/images/ic-login.svg" alt="login-icon"></a>
+			<a href="#logo"><img src="./resources/images/ic-logo.svg" alt="company icon"></a>
+			<a href="#campus"><img src="./resources/images/ic-on-campus.svg" alt="student desk icon"></a>
+			<a href="#online"><img src="./resources/images/ic-online.svg" alt="computer screen icon"></a>
+			<a href="#login"><img src="./resources/images/ic-login.svg" alt="person icon"></a>
 		</div>
 	</header>
 
@@ -210,7 +211,7 @@
 		<p>
 			&copy 2016 Colmar Academy. All rights reserved
 		</p>
-		<ul>
+		<ul role="presentation">
 			<a href="#terms"><li>Terms</li></a>
 			<a href="#terms"><li>Privacy</li></a>
 		</ul>
