--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 			</div>
 			<nav>
 				<ul role="presentation">
-					<a src="#campus"><li>On campus</li></a>
-					<a src="#companies"><li>For companies</li></a>
-					<a src="#signin"><li>Sign in</li></a>
+					<a href="#campus"><li>On campus</li></a>
+					<a href="#companies"><li>For companies</li></a>
+					<a href="#signin"><li>Sign in</li></a>
 				</ul>
 			</nav>
 		</div>
@@ -48,7 +48,7 @@
 				<p>
 					Be a producer, learn for yourself, learn for our species. Make something great.
 				</p>
-				<div class="button">Start here</div>
+				<div class="button"><a href="#starthere">Start here</a></div>
 			</div>
 		</div>
 
