--- a/index.html
+++ b/index.html
@@ -3,8 +3,32 @@
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<!-- styles -->
+
 	<link href="resources/css/reset.css" rel="stylesheet" type="text/css">
 	<link href="resources/css/index.css" rel="stylesheet" type="text/css">
+
+	<!-- logo icons -->
+
+	<link rel="apple-touch-icon" sizes="57x57" href="./resources/images/logo/apple-icon-57x57.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="./resources/images/logo/apple-icon-60x60.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="./resources/images/logo/apple-icon-72x72.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="./resources/images/logo/apple-icon-76x76.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="./resources/images/logo/apple-icon-114x114.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="./resources/images/logo/apple-icon-120x120.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="./resources/images/logo/apple-icon-144x144.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="./resources/images/logo/apple-icon-152x152.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="./resources/images/logo/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="./resources/images/logo/android-icon-192x192.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./resources/images/logo/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="./resources/images/logo/favicon-96x96.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./resources/images/logo/favicon-16x16.png">
+	<link rel="manifest" href="./resources/images/logo/manifest.json">
+	<meta name="msapplication-TileColor" content="#ffffff">
+	<meta name="msapplication-TileImage" content="./resources/images/logo/ms-icon-144x144.png">
+	<meta name="theme-color" content="#ffffff">
+
 	<title>Colmar Academy</title>
 </head>
 
@@ -21,6 +45,7 @@
 			<nav>
 				<ul role="presentation">
 					<a href="#campus"><li>On campus</li></a>
+					<a href="#online"><li>Online</li></a>
 					<a href="#companies"><li>For companies</li></a>
 					<a href="#signin"><li>Sign in</li></a>
 				</ul>
