--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
+	<meta charset="utf-8">
+	<meta name="author" content="Chaunte VandeBurgh">
+	<meta name="description" content="Colmar Academy, the fire that forges the soft into the iron elite.">
+	<title>Colmar Academy</title>
 	<!-- styles -->
 
 	<link href="resources/css/reset.css" rel="stylesheet" type="text/css">
@@ -29,7 +32,6 @@
 	<meta name="msapplication-TileImage" content="./resources/images/logo/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
 
-	<title>Colmar Academy</title>
 </head>
 
 <body>
