--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 	<meta name="author" content="Chaunte VandeBurgh">
 	<meta name="description" content="Colmar Academy, the fire that forges the soft into the iron elite.">
 	<title>Colmar Academy</title>
+
 	<!-- styles -->
 
+	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link href="resources/css/reset.css" rel="stylesheet" type="text/css">
 	<link href="resources/css/index.css" rel="stylesheet" type="text/css">
 
@@ -96,7 +98,9 @@
 			</div>
 			<div id="information-right">
 				<div class="more-info">
-					<img class="pc" src="./resources/images/information-orientation.jpg" alt="students-walking">
+					<div class="img-container">
+						<img class="pc" src="./resources/images/information-orientation.jpg" alt="students-walking">
+					</div>
 					<!-- mobile image -->
 					<img class="mobile" src="./resources/images/information-orientation-mobile.jpg" alt="students-walking">
 					<div class="text">
@@ -106,7 +110,9 @@
 					</div>
 				</div>
 				<div class="more-info">
-					<img class="pc" src="./resources/images/information-campus.jpg" alt="our-campus">
+					<div class="img-container">
+						<img class="pc" src="./resources/images/information-campus.jpg" alt="our-campus">
+					</div>
 					<!-- mobile image -->
 					<img class="mobile" src="./resources/images/information-campus-mobile.jpg" alt="our-campus">
 					<div class="text">
@@ -118,13 +124,15 @@
 					</div>
 				</div>
 				<div class="more-info">
-					<img class="pc" src="./resources/images/information-guest-lecture.jpg" alt="oliver-sacks-photo">
+					<div class="img-container">
+						<img class="pc" src="./resources/images/information-guest-lecture.jpg" alt="oliver-sacks-photo">
+					</div>
 					<!-- mobile image -->
 					<img class="mobile" src="./resources/images/information-guest-lecture-mobile.jpg" alt="oliver-sacks-photo">
 					<div class="text">
 						<h2>Our guest lecture</h2>
 						<p>
-							Loin a keynote with oliver sacks about music in medical treatment
+							Join a keynote with oliver sacks about music in medical treatment
 						</p>
 						<a href=""><p>Read more</p></a>
 					</div>
