start aria roles

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 				<p>
 					Be a producer, learn for yourself, learn for our species. Make something great.
 				</p>
-				<div class="button"><a href="#starthere">Start here</a></div>
+				<div class="button" role="button"><a href="#starthere">Start here</a></div>
 			</div>
 		</div>
 
