--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<img src="./resources/images/ic-logo.svg" alt="Colmar-Academy logo">
 				<p>COLMAR<span>ACADEMY</span></p>
 			</div>
-			<nav>
+			<nav role="menu">
 				<ul role="presentation">
 					<a href="#campus"><li>On campus</li></a>
 					<a href="#online"><li>Online</li></a>
@@ -70,7 +70,7 @@
 
 		<!-- banner section -->
 
-		<div id="banner">
+		<div id="banner" role="banner">
 			<img src="./resources/images/banner.jpg" alt="kids-learning-at-a-park-bench">
 			<div class="content">
 				<h1>Learn something new everyday</h1>
